--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+:root{
+
+  --section-height: 500px;
+  --section-width: 100%
+
+
+}
+
 /* # RESET */
 
 * {
@@ -56,12 +64,25 @@
     width: 20%;
   }
 
+  .section-header{
+    background-color: #010088;
+    height: var(--section-height);
+    width: var(--section-width);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .image-container{
+    border: 1px dotted black;
+    height: 400px;
+    width: 1000px;
+    background-color: #EC81EB;
+  }
 
     /* # Section */
 
-    .section-header{
-      background-color: #010088;
-      height: 500px;
-    }
+    
+
 
   
