--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root{
 
-  --section-height: 500px;
+  --section-height: 600px;
   --section-width: 100%
 
 
@@ -66,7 +66,7 @@
 
   .section-header{
     background-color: #010088;
-    height: var(--section-height);
+    height: 500px;
     width: var(--section-width);
     display: flex;
     align-items: center;
@@ -84,10 +84,6 @@
 
     .section{
       height: var(--section-height);
-      width: var(--section-width);
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     .color-one{
@@ -98,4 +94,25 @@
       background-color: #D2D2D2;
     }
 
+    .section-container{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 1200px;
+      vertical-align: middle;
+      height: 100%;
+    }
+
+    .container-element-one{
+      height: 500px;
+      width: 65%;
+      background-color: #1E8FF7;
+      border: 1px dotted black;
+    }
   
+    .container-element-two{
+      height: 500px;
+      width: 45%;
+      background-color: #F9BFCB;
+      border: 1px dotted black;
+    }
