--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,28 @@
       background-color: #F9BFCB;
       border: 1px dotted black;
     }
+
+    .container-element-oneInv{
+      height: 500px;
+      width: 45%;
+      background-color: #1E8FF7;
+      border: 1px dotted black;
+    }
+  
+    .container-element-twoInv{
+      height: 500px;
+      width: 65%;
+      background-color: #F9BFCB;
+      border: 1px dotted black;
+    }
+
+    .section-big{
+      height: 900px;
+    }
+
+    .container-big-element{
+      height: 800px;
+      width: 100%;
+      background-color: #228822;
+      border: 1px dotted black;
+    }
